k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: oceanai-frontend
spec:
  selector:
    app: oceanai-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
