k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oceanai-ingress
spec:
  rules:
    - host: oceanai.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oceanai-frontend
                port:
                  number: 3000
    - host: api.oceanai.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oceanai-backend
                port:
                  number: 3000
